# spotify-reccomendations

./: README.md
spotify-reccomendations/: .gitignore  README.md  pyproject.toml
spotify-reccomendations/spotify_reccomendations/: spotify_auth.py  spotify_reccomendations.py
spotify-reccomendations/spotify_reccomendations/app/: __init__.py  routes.py
spotify-reccomendations/spotify_reccomendations/app/templates/: homepage.html  recommendations.html  your_music.html
spotify-reccomendations/spotify_reccomendations/lib/: spotify_auth.py  spotify_requests.py  top_tracks.py  user_details.py
spotify-reccomendations/spotify_reccomendations/lib/llm_agent/: recommendations_agent.py
spotify-reccomendations/spotify_reccomendations/lib/models/: top_tracks.py  user_details.py
spotify-reccomendations/spotify_reccomendations/lib/spotify_api/: spotify_auth.py  spotify_requests.py
